Fix serialization bug for background shorthand.

The background color was appearing in both the 0th and the last layer,
instead of only the last layer, where it belongs.

Bug: 750220
Change-Id: Iffb9734f6c05b1a95681eefcabbb1e14f8a8d70f
Reviewed-on: https://chromium-review.googlesource.com/780127
Reviewed-by: nainar <nainar@chromium.org>
Commit-Queue: meade_UTC10 <meade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518168}
Former-commit-id: ffc49c5aaee683112e525aa26f92043e8f9f51ab